add illustrative script for cronning update of index and add help text in install notes.
git-svn-id: svn://svn.newznab.com/nn/trunk@16 a8b8df2f-1e19-4095-b43c-2e6d618ca476

--- a/misc/INSTALL.txt
+++ b/misc/INSTALL.txt
@@ -16,6 +16,17 @@ installation
 	browse to http://localhost/ and should see newznab homepage with default content.
 	newznab.site database table contains configurable info about your site.
 	
+updating index
+	updating the index can take ages depending on how much retention you require
+	as such its not recommended to run update scripts from web browsers, as typically
+	timeouts will occur. the recommended way to schedule updates is via a cron task 
+	similar to that in /misc/cron_update.
+	crontab -e
+	*/15 * * * * /path/to/newznab/misc/cron_update/newznab_update.sh
+
+updating newsgroups
+	can be done via web browser in /admin/ interface. 
+	
 google ads/analytics
 	to integrate google analytics and adsense provide enter the adsense ad module ids 
 	into the site table for the menu (top) and sidepanel (right). providing an analytics
@@ -26,7 +37,7 @@ admin
 	htaccess or directory level security
 
 content/cms
-	pages can be added to the site with seo friendly urls via the admin-edit content links
+	pages can be added to the site with seo friendly urls via the /admin/ edit content links
 	
 faqs
 	authorisation rejected from nntp server - check you have enough available connections 
