search and results of nzbs, few tweaks to url rewrites, minor style improvements
git-svn-id: svn://svn.newznab.com/nn/trunk@32 a8b8df2f-1e19-4095-b43c-2e6d618ca476

--- a/misc/INSTALL.txt
+++ b/misc/INSTALL.txt
@@ -47,3 +47,4 @@ content/cms
 faqs
 	authorisation rejected from nntp server - check you have enough available connections 
 	not currently in use
+	Fatal error: Call to undefined function mhash() - missing mcrypt and mhash php library includes
