list/edit/delete users and releases. move dorelease processing into release-edit page
git-svn-id: svn://svn.newznab.com/nn/trunk@35 a8b8df2f-1e19-4095-b43c-2e6d618ca476

--- a/misc/INSTALL.txt
+++ b/misc/INSTALL.txt
@@ -8,6 +8,7 @@ pre-reqs
 	iis
 		urlrewriter isapi in \misc\ installed
 	apache
+		mod_rewrite enabled
 		.htaccess allow override on
 		
 installation
