fix to release regex to get tv names better for sickbeard
git-svn-id: svn://svn.newznab.com/nn/trunk@48 a8b8df2f-1e19-4095-b43c-2e6d618ca476

--- a/misc/INSTALL.txt
+++ b/misc/INSTALL.txt
@@ -88,3 +88,9 @@ development
 	\www\theme\ blank area for implementation specific ui customisations
 	\www\includes js dumping ground
 	
+people who've helped along the way
+	iota@irc.cyberarmy.net		regexs,sessions
+	enstyne@irc.cyberarmy.net	regexs
+	gizmore@wechall.net			password,hash
+	lhbandit@nzbs.org			yenc,nntp,bokko	
+	
