rewrite mysql query to get groups and release counts out
git-svn-id: svn://svn.newznab.com/nn/trunk@53 a8b8df2f-1e19-4095-b43c-2e6d618ca476

--- a/misc/INSTALL.txt
+++ b/misc/INSTALL.txt
@@ -14,7 +14,7 @@ pre-reqs
 installation
 	create new database newznab
 	add new user with only rights to newznab db
-	import \db\schema.sql into newznab db
+	import \db\schema.sql into newznab db (if this doesnt work piping in, use a query editor)
 	copy \www\config.php.dist to \www\config.php and edit all settings
 	chmod -R 777 \www\lib\smarty\template_c
 	restart iis/apache
