accessibility on group edit labels, extra install notes, few helpful words on admin homepage
git-svn-id: svn://svn.newznab.com/nn/trunk@72 a8b8df2f-1e19-4095-b43c-2e6d618ca476

--- a/misc/INSTALL.txt
+++ b/misc/INSTALL.txt
@@ -5,9 +5,13 @@ pre-reqs
 	php mhash module
 	php mcrypt module
 	php sessions enabled
+	php memory limit set to 256 
+	php recommended minimum execution time of at least 60 seconds
 	iis
 		urlrewriter isapi in \misc\ installed
+		script timeout of at least 60 seconds
 	apache
+		script timeout of at least 60 seconds
 		mod_rewrite enabled
 		.htaccess allow override on
 		
