htaccess for running outside root of web dir
git-svn-id: svn://svn.newznab.com/nn/trunk@123 a8b8df2f-1e19-4095-b43c-2e6d618ca476

--- a/misc/INSTALL.txt
+++ b/misc/INSTALL.txt
@@ -31,6 +31,9 @@ installation
 	call \admin\binary-update.php to populate database with binaries + parts.
 	call \admin\release-update.php to create releases from all complete binary sets.
 
+running	outside of root website
+	set /htaccess RewriteBase to your virtual directory
+	
 how it works
 	groups are specified, message headers (binaries and parts) are downloaded for the 
 	groups, releases are created from completed sets of binaries. releases are categorised
