additional line in install notes about chmodding the smarty cache folder, incase we start using caching.
git-svn-id: svn://svn.newznab.com/nn/trunk@196 a8b8df2f-1e19-4095-b43c-2e6d618ca476

--- a/misc/INSTALL.txt
+++ b/misc/INSTALL.txt
@@ -24,6 +24,7 @@ installation
 	import \db\schema.sql into newznab db (if this doesnt work piping in, use a query editor)
 	copy \www\config.php.dist to \www\config.php and edit all settings
 	chmod -R 777 \www\lib\smarty\template_c
+	chmod -R 777 \www\lib\smarty\cache
 	restart iis/apache
 	browse to http://localhost/ and should see newznab homepage with default content.
 	newznab.site database table contains configurable info about your site.
