add GD php dependancy to install notes
git-svn-id: svn://svn.newznab.com/nn/trunk@342 a8b8df2f-1e19-4095-b43c-2e6d618ca476

--- a/misc/INSTALL.txt
+++ b/misc/INSTALL.txt
@@ -5,6 +5,7 @@ pre-reqs
 		ft_min_word_len=3 - allows searching for matches of 3characters
 	pear net_nntp module
 	php sessions enabled
+	php GD imaging library
 	php memory limit set to 256 
 	php recommended minimum execution time of at least 60 seconds
 	iis
